Closed Bug 440190 Opened 18 years ago Closed 18 years ago

crash importing outlook contact csv data file [@ nsTextAddress::GetField]

Categories

(MailNews Core :: Import, defect)

defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9.1a1

People

(Reporter: wsmwk, Assigned: timeless)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

crash importing outlook contact csv data file [@ nsTextAddress::GetField] TB46349145 and TB44833177 Stack Signature nsTextAddress::GetField 761289f0 Product ID Thunderbird2 Build ID 2008042104 Operating System Windows NT 5.1 build 2600 User Comments Repeatedly clicking next in the process of importing contacts from a csv outlook exported file, trying to get to a contact where I can match up phone number, email, etc. Source File, Line No. e:/builds/tinderbox/Tb-Mozilla1.8-Release/WINNT_5.0_Depend/mozilla/mailnews/import/text/src/nsTextAddress.cpp, line 344 Stack Trace nsTextAddress::GetField [mozilla/mailnews/import/text/src/nsTextAddress.cpp, line 344] ImportAddressImpl::GetSampleData [mozilla/mailnews/import/text/src/nsTextImport.cpp, line 681] nsImportGenericAddressBooks::GetData [mozilla/mailnews/import/src/nsImportAddressBooks.cpp, line 304] XPTC_InvokeByIndex [mozilla/xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp, line 102] XPCWrappedNative::CallMethod [mozilla/js/src/xpconnect/src/xpcwrappednative.cpp, line 2169] XPC_WN_CallMethod [mozilla/js/src/xpconnect/src/xpcwrappednativejsops.cpp, line 1455] js_Invoke [mozilla/js/src/jsinterp.c, line 1384] js_Interpret [mozilla/js/src/jsinterp.c, line 3955] js_Invoke [mozilla/js/src/jsinterp.c, line 1403] js_InternalInvoke [mozilla/js/src/jsinterp.c, line 1478] JS_CallFunctionValue [mozilla/js/src/jsapi.c, line 4363] nsJSContext::CallEventHandler [mozilla/dom/src/base/nsJSEnvironment.cpp, line 1493] nsJSEventListener::HandleEvent [mozilla/dom/src/events/nsJSEventListener.cpp, line 195] nsEventListenerManager::HandleEventSubType [mozilla/content/events/src/nsEventListenerManager.cpp, line 1655] nsEventListenerManager::HandleEvent [mozilla/content/events/src/nsEventListenerManager.cpp, line 1762] nsXULElement::HandleDOMEvent [mozilla/content/xul/content/src/nsXULElement.cpp, line 2234] PresShell::HandleDOMEventWithTarget [mozilla/layout/base/nsPresShell.cpp, line 6622] nsButtonBoxFrame::DoMouseClick [mozilla/layout/xul/base/src/nsButtonBoxFrame.cpp, line 181] nsButtonBoxFrame::MouseClicked [mozilla/layout/xul/base/src/nsButtonBoxFrame.h, line 61] PresShell::HandleEventInternal [mozilla/layout/base/nsPresShell.cpp, line 6564] PresShell::HandleEventWithTarget [mozilla/layout/base/nsPresShell.cpp, line 6420] nsEventStateManager::CheckForAndDispatchClick [mozilla/content/events/src/nsEventStateManager.cpp, line 3207] nsEventStateManager::PostHandleEvent [mozilla/content/events/src/nsEventStateManager.cpp, line 2170] PresShell::HandleEventInternal [mozilla/layout/base/nsPresShell.cpp, line 6595] PresShell::HandleEvent [mozilla/layout/base/nsPresShell.cpp, line 6358] nsViewManager::HandleEvent [mozilla/view/src/nsViewManager.cpp, line 2566] nsViewManager::DispatchEvent [mozilla/view/src/nsViewManager.cpp, line 2253] HandleEvent [mozilla/view/src/nsView.cpp, line 174] nsWindow::DispatchEvent [mozilla/widget/src/windows/nsWindow.cpp, line 1319] nsWindow::DispatchMouseEvent [mozilla/widget/src/windows/nsWindow.cpp, line 6329] ChildWindow::DispatchMouseEvent [mozilla/widget/src/windows/nsWindow.cpp, line 6576] nsWindow::WindowProc [mozilla/widget/src/windows/nsWindow.cpp, line 1507]
Attachment #325660 - Flags: review?(bienvenu)
Comment on attachment 325660 [details] [diff] [review] the current code can crash and leak yup, thx timeless
Attachment #325660 - Flags: review?(bienvenu) → review+
Assignee: nobody → timeless
Adding blocking flag so this get's checked in for a2.
Flags: blocking-thunderbird3.0a2+
OS: Windows XP → All
Hardware: PC → All
Target Milestone: --- → mozilla1.9.1a1
Comment on attachment 325660 [details] [diff] [review] the current code can crash and leak mozilla/mailnews/import/text/src/nsTextAddress.cpp 1.53
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Product: Core → MailNews Core
Crash Signature: [@ nsTextAddress::GetField]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: